--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,24 +31,24 @@ jobs:
 workflows:
   version: 2
   build-and-release:
-    - build:
-        filters:
-          tags:
-            only: /.*/
-    - test-release:
-        requires:
-          - build
-        filters:
-          branches:
-            only: master
-          tags:
-            ignore: /.*/
-    - release:
-        requires:
-          - build
-        filters:
-          tags:
-            only: /^v.*/
-          branches:
-            ignore: /.*/
-
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /.*/
+      - test-release:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
+            tags:
+              ignore: /.*/
+      - release:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
