Execute twine with python -m

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - attach_workspace:
           at: /tmp
       - run: python -m pip install --user --upgrade twine
-      - run: twine upload -p $PYPI_USERNAME -u $PYPI_PASSWORD --repository-url https://test.pypi.org/legacy/ dist/*
+      - run: python -m twine upload -p $PYPI_USERNAME -u $PYPI_PASSWORD --repository-url https://test.pypi.org/legacy/ dist/*
   release:
     docker:
       - image: circleci/python:2.7
@@ -28,7 +28,7 @@ jobs:
       - attach_workspace:
           at: /tmp
       - run: python -m pip install --user --upgrade twine
-      - run: twine upload -p $PYPI_USERNAME -u $PYPI_PASSWORD --repository-url https://upload.pypi.org/legacy/ dist/*
+      - run: python -m twine upload -p $PYPI_USERNAME -u $PYPI_PASSWORD --repository-url https://upload.pypi.org/legacy/ dist/*
 
 workflows:
   version: 2
