--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp
-      - run: python -m pip install --user --upgrade twine
+      - run: python -m pip install --user twine==1.11.0
       - run: python -m twine upload --verbose -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://test.pypi.org/legacy/ dist/*
   release:
     docker:
@@ -27,7 +27,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp
-      - run: python -m pip install --user --upgrade twine
+      - run: python -m pip install --user twine==1.11.0
       - run: python -m twine upload --verbose -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://upload.pypi.org/legacy/ dist/*
 
 workflows:
