--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - attach_workspace:
           at: /tmp
       - run: python -m pip install --user twine==1.11.0
-      - run: python -m twine upload --verbose -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://test.pypi.org/legacy/ dist/*
+      - run: python -m twine upload -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://test.pypi.org/legacy/ dist/*
   release:
     docker:
       - image: circleci/python:2.7
@@ -28,7 +28,7 @@ jobs:
       - attach_workspace:
           at: /tmp
       - run: python -m pip install --user twine==1.11.0
-      - run: python -m twine upload --verbose -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://upload.pypi.org/legacy/ dist/*
+      - run: python -m twine upload -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://upload.pypi.org/legacy/ dist/*
 
 workflows:
   version: 2
