--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,13 @@
 version: 2
 jobs:
-  build:
+  build-and-test:
     docker:
       - image: circleci/python:2.7
     working_directory: /tmp/workspace
     steps:
       - checkout
-      - run: python setup.py sdist bdist_wheel
+      - run: python setup.py develop
+      - run: TENSORDASH_API=https://1072qzavta.execute-api.us-east-1.amazonaws.com/dev/config python test/tensordash.py
       - persist_to_workspace:
           root: /tmp
           paths:
@@ -18,6 +19,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp
+      - run: python setup.py sdist bdist_wheel
       - run: python -m pip install --user twine==1.11.0
       - run: python -m twine upload -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://test.pypi.org/legacy/ dist/*
   release:
@@ -27,6 +29,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp
+      - run: python setup.py sdist bdist_wheel
       - run: python -m pip install --user twine==1.11.0
       - run: python -m twine upload -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://upload.pypi.org/legacy/ dist/*
 
@@ -34,13 +37,13 @@ workflows:
   version: 2
   build-and-release:
     jobs:
-      - build:
+      - build-and-test:
           filters:
             tags:
               only: /.*/
       - test-release:
           requires:
-            - build
+            - build-and-test
           filters:
             branches:
               only: master
@@ -48,7 +51,7 @@ workflows:
               ignore: /.*/
       - release:
           requires:
-            - build
+            - build-and-test
           filters:
             tags:
               only: /^v.*/
