Rename test file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: sudo python setup.py develop
-      - run: TENSORDASH_API=https://1072qzavta.execute-api.us-east-1.amazonaws.com/dev/config python test/tensordash.py
+      - run: TENSORDASH_API=https://1072qzavta.execute-api.us-east-1.amazonaws.com/dev/config python test/test.py
       - persist_to_workspace:
           root: /tmp
           paths:
