--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build-and-test:
+  test-python-2:
     docker:
       - image: circleci/python:2.7
     working_directory: /tmp/workspace
@@ -12,6 +12,14 @@ jobs:
           root: /tmp
           paths:
             - workspace
+  test-python3:
+    docker:
+      - image: circleci/python:3.6
+    working_directory: /tmp/workspace
+    steps:
+      - checkout
+      - run: sudo python setup.py develop
+      - run: TENSORDASH_API=https://1072qzavta.execute-api.us-east-1.amazonaws.com/dev/config python test/test.py
   test-release:
     docker:
       - image: circleci/python:2.7
@@ -37,13 +45,18 @@ workflows:
   version: 2
   build-and-release:
     jobs:
-      - build-and-test:
+      - test-python-2:
+          filters:
+            tags:
+              only: /.*/
+      - test-python3:
           filters:
             tags:
               only: /.*/
       - test-release:
           requires:
-            - build-and-test
+            - test-python-2
+            - test-python-3
           filters:
             branches:
               only: master
@@ -51,7 +64,8 @@ workflows:
               ignore: /.*/
       - release:
           requires:
-            - build-and-test
+            - test-python-2
+            - test-python-3
           filters:
             tags:
               only: /^v.*/
