--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,25 @@
 version: 2
 jobs:
-  build:
+  test-python2:
     docker:
       - image: circleci/python:2.7
     working_directory: /tmp/workspace
     steps:
       - checkout
-      - run: python setup.py sdist bdist_wheel
+      - run: sudo python setup.py develop
+      - run: TENSORDASH_API=https://1072qzavta.execute-api.us-east-1.amazonaws.com/dev/config python test/test.py
       - persist_to_workspace:
           root: /tmp
           paths:
             - workspace
+  test-python3:
+    docker:
+      - image: circleci/python:3.6
+    working_directory: /tmp/workspace
+    steps:
+      - checkout
+      - run: sudo python setup.py develop
+      - run: TENSORDASH_API=https://1072qzavta.execute-api.us-east-1.amazonaws.com/dev/config python test/test.py
   test-release:
     docker:
       - image: circleci/python:2.7
@@ -18,6 +27,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp
+      - run: python setup.py sdist bdist_wheel
       - run: python -m pip install --user twine==1.11.0
       - run: python -m twine upload -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://test.pypi.org/legacy/ dist/*
   release:
@@ -27,6 +37,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp
+      - run: python setup.py sdist bdist_wheel
       - run: python -m pip install --user twine==1.11.0
       - run: python -m twine upload -u $PYPI_USERNAME -p $PYPI_PASSWORD --repository-url https://upload.pypi.org/legacy/ dist/*
 
@@ -34,13 +45,18 @@ workflows:
   version: 2
   build-and-release:
     jobs:
-      - build:
+      - test-python2:
+          filters:
+            tags:
+              only: /.*/
+      - test-python3:
           filters:
             tags:
               only: /.*/
       - test-release:
           requires:
-            - build
+            - test-python2
+            - test-python3
           filters:
             branches:
               only: master
@@ -48,7 +64,8 @@ workflows:
               ignore: /.*/
       - release:
           requires:
-            - build
+            - test-python2
+            - test-python3
           filters:
             tags:
               only: /^v.*/
